    - fromdigits(str[,base])  convert string to base 10 number
    - is_smooth(n,k)          is n a k-smooth number
    - is_rough(n,k)           is n a k-rough number
    - is_powerful(n[,k])      is n a k-powerful number (default k=2)
    - is_practical(n)         is n a practical number
    - is_trial_prime(n)       primality using trial division
    - submod                  (a - b) % n

    [FIXES]

    - sieve_range with tiny start and depth values could sieve one deeper
      than precisely requested.

    - is_ecpp_prime() returns 1 or 0, rather than 2 or 0.  This matches the
      documentation and other functions (e.g. bls75, miller, aks).

    - harmfrac(0) returns zero.

    - ei > 100 called euler constant with incorrect precision.

    - divmod (a,0,1) = 0, to match MPU, Pari, and Math::BigInt.
      divmod (a,1,n) = a mod n.  It was returning 0 in some cases.

    - zeta could round the last digit wrong in rare cases.

    [PERFORMANCE]

    - The first 100 Bernoulli numbers are cached, and more will be cached
      by bernvec or faulhaber_sum.

    - Add faster factorialmod code.  5-10x faster for large inputs.


0.52 2020-06-22

    [ADDED]

    - powint(a,b)             integer a^b
    - mulint(a,b)             integer a*b
    - addint(a,b)             integer a+b
    - subint(a,b)             integer a-b
    - divint(a,b)             integer a/b quotient  (floor)
    - modint(a,b)             integer a/b modulo    (floor)
    - divrem(a,b)             integer a/b quo + rem (Euclidian)
    - tdivrem(a,b)            integer a/b quo + rem (truncated)
    - absint(n)               integer absolute value
    - negint(n)               integer negate: returns -n
    - is_gaussian_prime(a,b)  is a+bi a Gaussian prime
    - random_safe_prime(b)    random b-bit safe prob prime
    - next_twin_prime(n)      returns start of twin prime > n

    [FIXES]

    - Remove a mod in the AKS test that was in code since 2012.
