@@ -58,7 +58,7 @@ Perl 5.6.2 or later.  No modules outside of Core have been used.
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2011-2020 by Dana Jacobsen <dana@acm.org>
+Copyright (C) 2011-2021 by Dana Jacobsen <dana@acm.org>
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself.
