@@ -14,6 +14,8 @@ Revision history for Perl module Math::Prime::Util::GMP
     - is_practical(n)         is n a practical number
     - is_trial_prime(n)       primality using trial division
     - submod                  (a - b) % n
+    - prime_bigomega(n)       number of factors (with multiplicity)
+    - prime_omega(n)          number of factors (distinct)
 
     [FIXES]
 
